# plenigo-python

./: .gitignore  LICENSE  README.md  setup.cfg
plenigo/: util.py
plenigo/client/: http_client.py
plenigo/entities/: access_right.py  activity.py  address.py  customer.py  session.py  transaction.py
plenigo/processes/: login.py  password.py
plenigo/resources/: deletable_resource.py  get_resource.py  resource.py  searchable_resource.py  updatable_resource.py
src/plenigo/: error.py
src/plenigo/entities/: access_right.py  activity.py  address.py  customer.py  transaction.py
src/plenigo/processes/: environment.py  process_settings.py  registration.py
src/plenigo/resources/: resource.py  searchable_resource.py
