[metadata]
name = plenigo-python
version = 0.0.1
author = plenigo GmbH
author_email = info@plenigo.com
description = API Wrapper for plenigo API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/plenigo/plenigo-python
project_urls =
    Bug Tracker = https://github.com/plenigo/plenigo-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
